# StellarSpark-DApp

./: .gitignore  README.md  index.html  package-lock.json  package.json
contracts/: Cargo.toml
contracts/src/: lib.rs
src/: App.jsx  AppKitProvider.jsx  index.css
