[package]
name = "stellar_spark"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "22.0.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
incremental = false
codegen-units = 1
lto = true
